# BetterResume

./: .cursorrules  .gitignore  CMakeLists.txt  README.md
.githooks/: pre-push
cmake/: FindHPDF.cmake
include/: pdf_generator.hpp  resume.hpp
src/: main.cpp  pdf_generator.cpp  resume.cpp
